update sync service